@@ -7,6 +7,8 @@ Slated for 2.17.0
   strings.
 - Added: Common.printBuffer(...) debug methods for printing the contents of 
   buffers, both direct and in-Java.
+- Added: com.blackrook.commons.Singleton for managing and creating singleton
+  instances of classes.
 
 
 Changed in 2.16.0
